@@ -32,7 +32,7 @@ public final class KaffeNative2Ascii extends DefaultNative2Ascii {
 
     // sorted by newest Kaffe version first
     private static final String[] N2A_CLASSNAMES = new String[] {
-        "gnu.classpath.tools.native2ascii.Native2Ascii",
+        "gnu.classpath.tools.native2ascii.Native2ASCII",
         // pre Kaffe 1.1.5
         "kaffe.tools.native2ascii.Native2Ascii",
     };
